@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[59] --> Fix Sap removes Stealth.
 [58] --> Fix [Warlock] Chaos Bolt.
          - "Chaos Bolt cannot be resisted, and pierces through all absorption effects."
 [57] --> Removes Master's Call stun immunity.
